--- a/financial-tracker/src/app/components/sign-in/sign-in.component.html
+++ b/financial-tracker/src/app/components/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="sign-in-container">
   <h2>Sign In</h2>
 
-  <form (ngSubmit)="onSubmit()">
+  <form #signInForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="email">Email</label>
       <input
