can submit home page data to databse

--- a/financial-tracker/src/app/components/home/home.component.html
+++ b/financial-tracker/src/app/components/home/home.component.html
@@ -53,8 +53,8 @@
       />
     </div>
 
-    <button class="proceed-btn" (click)="proceedToCategory()">
-      Proceed to Category Selection
+    <button class="proceed-btn" (click)="submitExpense()">
+      Submit Expense
     </button>
   </div>
 </div>
