foundation for anaylsis

--- a/financial-tracker/src/app/components/home/home.component.html
+++ b/financial-tracker/src/app/components/home/home.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="nav-links">
       <a routerLink="/home" class="nav-link">Home</a>
-      <a routerLink="" class="nav-link">Analysis</a>
-      <a routerLink="" class="nav-link">History</a>
+      <a routerLink="/analysis" class="nav-link">Analysis</a>
+      <a routerLink="/history" class="nav-link">History</a>
     </div>
   </nav>
   <div class="expense-form">
