bar chart for previous months added on analysis

--- a/financial-tracker/src/app/components/analysis/analysis.component.html
+++ b/financial-tracker/src/app/components/analysis/analysis.component.html
@@ -10,6 +10,9 @@
 </nav>
 <div class="content-container">
   <h1>Analysis</h1>
+  <div class="chart-container">
+    <canvas id="monthlyExpensesChart"></canvas>
+  </div>
 </div>
 <div class="analysis-container">
   <h2>Expense Analysis</h2>
