--- a/financial-tracker/src/app/components/home/home.component.html
+++ b/financial-tracker/src/app/components/home/home.component.html
@@ -24,7 +24,7 @@
 
     <div class="form-group">
       <label>Category</label>
-      <select [(ngModel)]="description" class="form-control">
+      <select [(ngModel)]="category" class="form-control">
         <option value="" disabled selected>Select a category</option>
         <option value="Housing">Housing</option>
         <option value="Transportation">Transportation</option>
@@ -41,6 +41,16 @@
         <option value="Family and Childcare">Family and Childcare</option>
         <option value="Miscellaneous">Miscellaneous</option>
       </select>
+    </div>
+
+    <div class="form-group">
+      <label>Description</label>
+      <textarea
+        [(ngModel)]="details"
+        placeholder="Enter details about your expense..."
+        class="form-control"
+        rows="3"
+      ></textarea>
     </div>
 
     <div class="form-group">
