--- a/financial-tracker/src/app/components/sign-in/sign-in.component.html
+++ b/financial-tracker/src/app/components/sign-in/sign-in.component.html
@@ -1,33 +1,42 @@
-<div class="sign-in-container">
-  <h2>Sign In</h2>
+<div class="auth-container">
+  <div class="auth-card">
+    <h2>Welcome back</h2>
+    <div class="subtitle">Sign in to continue managing your finances</div>
 
-  <form #signInForm="ngForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input
-        type="email"
-        id="email"
-        [(ngModel)]="email"
-        name="email"
-        required
-      />
-    </div>
+    <form #signInForm="ngForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <input
+          type="email"
+          id="email"
+          [(ngModel)]="email"
+          name="email"
+          required
+          placeholder="Enter your email"
+        />
+        <i class="fas fa-envelope"></i>
+      </div>
 
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        id="password"
-        [(ngModel)]="password"
-        name="password"
-        required
-      />
-    </div>
+      <div class="form-group">
+        <input
+          type="password"
+          id="password"
+          [(ngModel)]="password"
+          name="password"
+          required
+          placeholder="Enter your password"
+        />
+        <i class="fas fa-lock"></i>
+      </div>
 
-    <div class="error" *ngIf="error">{{ error }}</div>
+      <div class="error" *ngIf="error">{{ error }}</div>
 
-    <button type="submit">Sign In</button>
-  </form>
+      <button type="submit">Sign In</button>
 
-  <p>Don't have an account? <a routerLink="/signup">Sign Up</a></p>
+      <div class="divider">or</div>
+
+      <div class="auth-footer">
+        Don't have an account? <a routerLink="/signup">Sign Up</a>
+      </div>
+    </form>
+  </div>
 </div>
